[gd_scene load_steps=11 format=3 uid="uid://dtckjhie1kyk0"]

[ext_resource type="Script" uid="uid://d033s5aju5alk" path="res://Levels/door.gd" id="1_c5cab"]
[ext_resource type="Texture2D" uid="uid://thnj12t7c3yd" path="res://Assets/icon.svg" id="2_obau8"]
[ext_resource type="AudioStream" uid="uid://clus8hqnndj0y" path="res://Assets/SFX/Level/Doors Closing/546160__quality83__gate_openclose.ogg" id="3_ppseb"]
[ext_resource type="AudioStream" uid="uid://dyqbhhxcrqa22" path="res://Assets/SFX/Level/Doors Closing/404069__swordofkings128__backyard-gate-close.ogg" id="4_o6o21"]
[ext_resource type="AudioStream" uid="uid://dl4h5ubuwrwnn" path="res://Assets/SFX/Level/Doors Opening/404069__swordofkings128__backyard-gate-close.ogg" id="5_tf1mp"]
[ext_resource type="AudioStream" uid="uid://qmpvyl1tjqsu" path="res://Assets/SFX/Level/Doors Opening/404068__swordofkings128__backyard-gate-open.wav" id="6_ghfw5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ppseb"]
size = Vector2(244, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c5cab"]
resource_local_to_scene = true
size = Vector2(240, 30)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_tf1mp"]
random_pitch = 1.2
streams_count = 2
stream_0/stream = ExtResource("3_ppseb")
stream_1/stream = ExtResource("4_o6o21")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_xk5ei"]
random_pitch = 1.2
streams_count = 2
stream_0/stream = ExtResource("5_tf1mp")
stream_1/stream = ExtResource("6_ghfw5")

[node name="Door" type="Node2D"]
script = ExtResource("1_c5cab")

[node name="LockedSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_obau8")
region_enabled = true
region_rect = Rect2(0, 0, 280, 120)

[node name="UnlockedSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_obau8")
region_enabled = true
region_rect = Rect2(0, 0, 280, 120)

[node name="PlayerDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2(0, -15)
shape = SubResource("RectangleShape2D_ppseb")

[node name="ClosedDoor" type="StaticBody2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ClosedDoor"]
position = Vector2(0, -15)
shape = SubResource("RectangleShape2D_c5cab")

[node name="LockSFX" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_tf1mp")
bus = &"SFX"

[node name="UnlockSFX" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_xk5ei")
volume_db = 10.0
bus = &"SFX"

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
